Fix calendar event card positioning on mobile widths

--- a/strideIT/src/globals.css
+++ b/strideIT/src/globals.css
@@ -3404,8 +3404,8 @@ select.modal-input::-ms-expand {
   top: 2px;
   bottom: 2px;
   z-index: 4;
-  left: calc(var(--event-start-minutes, 0) * 2.85px);
-  width: calc((var(--event-duration-minutes, 30) * 4.2px));
+  left: calc((var(--event-start-minutes, 0) / 30) * var(--cal-time-col-width));
+  width: calc((var(--event-duration-minutes, 30) / 30) * var(--cal-time-col-width));
 }
 .cal-event-status {
   display: inline-flex;
